kubeflow-v0.6/manifests-repo/manifests-master/asi/auth-istio-dex/base/envoy-filter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: authn-filter
  namespace: kubeflow
spec:
  workloadLabels:
    #include namespace in the label to avoid clashes across namespaces
    istio: ingressgateway
  filters:
    - filterConfig:
        failureModeAllow: false
        httpService:
          serverUri:
            uri: http://authservice.istio-system.svc.cluster.local
            cluster: outbound|8080||authservice.istio-system.svc.cluster.local
            timeout: 10s
          authorizationRequest:
            allowedHeaders:
              patterns:
                - exact: "cookie"
          authorizationResponse:
            allowedUpstreamHeaders:
              patterns:
                - exact: "kubeflow-userid"
        statusOnError:
          code: GatewayTimeout
      filterName: envoy.ext_authz
      filterType: HTTP
      insertPosition:
        index: FIRST
      listenerMatch:
        portNumber: 80
        listenerType: GATEWAY
