kubeflow-v0.6/manifests-repo/manifests-master/asi/auth-istio-dex/base/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kubeflow-gateway
  namespace: kubeflow
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 5556
        name: http-dex
        protocol: HTTP
      hosts:
        - "kubeflow.svc.oleg108.dev.superhub.io"
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "kubeflow.svc.oleg108.dev.superhub.io"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: auth-virtual-services
  namespace: kubeflow
spec:
  hosts:
    - "kubeflow.svc.oleg108.dev.superhub.io"
  gateways:
    - kubeflow-gateway
  http:
    - match:
        - port: 5556
      route:
        - destination:
            port:
              number: 5556
            host: dex.dex.svc.cluster.local
